<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/create_a_rgb_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_color"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        />

    <TextView
        style="@style/instructions"
        android:layout_width="match_parent"
        android:id="@+id/add_two"
        android:layout_height="wrap_content"
        android:text="@string/add_two"
        app:layout_constraintTop_toBottomOf="@id/create_a_rgb_color"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/red_channel_tiet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_two"
        android:hint="@string/red_channel"
        style="@style/style_for_input_field">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/red_channel"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/green_channel_tiet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/red_channel_tiet"
        android:hint="@string/green_channel"
        style="@style/style_for_input_field">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/green_channel"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/blue_channel_tiet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/green_channel_tiet"
        android:hint="@string/blue_channel"
        style="@style/style_for_input_field">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/blue_channel"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/blue_channel_tiet"
        app:layout_constraintStart_toStartOf="@id/blue_channel_tiet"
        android:id="@+id/create_the_color"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:text="@string/create_color"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_the_color"
        android:background="@color/teal_700"
        android:gravity="center"
        android:text="@string/created_color_display"
        android:layout_margin="8dp"
        android:id="@+id/result_create_color"/>


</androidx.constraintlayout.widget.ConstraintLayout>